Add curl install step

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,10 @@ USER root
 ENV USER_HOME="/opt/app" \
     KUBECTL_VERSION="v1.20.5"
 
+RUN cd /tmp/ && \
+    apt-get update -y && \
+	apt-get install curl -y
+	
 RUN curl -LO "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl" && \
     curl -LO "https://dl.k8s.io/${KUBECTL_VERSION}/bin/linux/amd64/kubectl.sha256"  && \
     echo "$(<kubectl.sha256) kubectl" | sha256sum --check
